added ability to load a teams tournament games for selection in suspension area.

--- a/WebContent/addsuspensions.xhtml
+++ b/WebContent/addsuspensions.xhtml
@@ -62,16 +62,16 @@
 
 					<b:panelGrid colSpans="1,3,2,2,2,2" id="panelgrid">
 						<h:outputText value=" " />
-						<b:selectOneMenu value="#{scoreboardBean.selectedseasonid}" onchange="ajax:scoreboardBean.onSeasonChange()" update="@form" rendered="#{!suspensionBean.displayselectedlivegame}">
+						<b:selectOneMenu value="#{scoreboardBean.selectedseasonid}" onchange="ajax:scoreboardBean.onSeasonChange()" update="@form" >
 							<f:selectItem style="font-size:10pt;" itemLabel="Select a Season..." itemValue="0" />
 							<f:selectItems value="#{scoreboardBean.getSeasonlist()}"  var="season"  itemLabel="#{season.getDescription()}" itemValue="#{season.getKey()}"/>
 						</b:selectOneMenu>
-						<b:selectOneMenu value="#{scoreboardBean.selectedscheduleid}" onchange="ajax:scoreboardBean.onScheduleChange()" update="@form" rendered="#{!suspensionBean.displayselectedlivegame}">
+						<b:selectOneMenu value="#{scoreboardBean.selectedscheduleid}" onchange="ajax:scoreboardBean.onScheduleChange()" update="@form" >
 							<f:selectItem style="font-size:10pt;" itemLabel="Select a Schedule..." itemValue="0" />
 							<f:selectItems  value="#{scoreboardBean.getSchedulelist()}" var="schedule" itemLabel="#{schedule.getDescription()}" itemValue="#{schedule.getKey()}" />
 						</b:selectOneMenu>
 
-						<b:selectOneMenu value="#{scoreboardBean.selectedpartid}" onchange="ajax:scoreboardBean.onPartChange()" update="@form" rendered="#{!suspensionBean.displayselectedlivegame}">
+						<b:selectOneMenu value="#{scoreboardBean.selectedpartid}" onchange="ajax:scoreboardBean.onPartChange()" update="@form" >
 							<f:selectItem style="font-size:10pt;" itemLabel="Schedule For All Teams..." itemValue="0" />
 							<f:selectItems  value="#{scoreboardBean.getPartpicklist()}" var="part" itemLabel="#{part.getTeam().getTeamname()}" itemValue="#{part.getKey()}" />
 						</b:selectOneMenu>
@@ -212,6 +212,88 @@
 						<h:outputText value="Select Tournament Game"/>
 					</f:facet>
 
+					<b:panelGrid colSpans="1,3,2,2,2,2" id="paneltggrid">
+						<h:outputText value=" " />
+						<b:selectOneMenu value="#{scoreboardBean.selectedseasonid}" onchange="ajax:scoreboardBean.onSeasonChange()" update="@form" >
+							<f:selectItem style="font-size:10pt;" itemLabel="Select a Season..." itemValue="0" />
+							<f:selectItems value="#{scoreboardBean.getSeasonlist()}"  var="season"  itemLabel="#{season.getDescription()}" itemValue="#{season.getKey()}"/>
+						</b:selectOneMenu>
+						<b:selectOneMenu value="#{scoreboardBean.selectedscheduleid}" onchange="ajax:scoreboardBean.onScheduleChange()" update="@form" >
+							<f:selectItem style="font-size:10pt;" itemLabel="Select a Schedule..." itemValue="0" />
+							<f:selectItems  value="#{scoreboardBean.getSchedulelist()}" var="schedule" itemLabel="#{schedule.getDescription()}" itemValue="#{schedule.getKey()}" />
+						</b:selectOneMenu>
+
+						<b:selectOneMenu value="#{scoreboardBean.selectedpartid}" onchange="ajax:suspensionBean.onPartChange()" update="@form" >
+							<f:selectItem style="font-size:10pt;" itemLabel="Schedule For All Teams..." itemValue="0" />
+							<f:selectItems  value="#{scoreboardBean.getPartpicklist()}" var="part" itemLabel="#{part.getTeam().getTeamname()}" itemValue="#{part.getKey()}" />
+						</b:selectOneMenu>
+						<h:outputText value=" " />
+						<h:outputText value=" " />
+
+					</b:panelGrid>
+
+					<b:dataTable
+							id="tournamentgamesnew"
+							var="tournamentgame"
+							value="#{suspensionBean.getTournamentgamedatamodel()}"
+							editable="true"
+							select="true"
+							selection="#{suspensionBean.selectedtournament}"
+							selectionMode="single"
+							paginated="true"
+							border="true"
+							searching="false"
+					>
+						<b:dataTableColumn styleClass="mtrxColumn">
+							<f:facet name="header">
+								Game Type
+							</f:facet>
+							<h:outputText value="#{tournamentgame.getGametype()}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn styleClass="mtrxColumn">
+							<f:facet name="header">
+								Date
+							</f:facet>
+							<h:outputText value="#{tournamentgame.getDate()}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn styleClass="mtrxColumn">
+							<f:facet name="header">
+								Time
+							</f:facet>
+							<h:outputText value="#{tournamentgame.getTime()}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn styleClass="mtrxColumn">
+							<f:facet name="header">
+								Opponent
+							</f:facet>
+							<h:outputText value="#{tournamentgame.getOpponent()}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn styleClass="mtrxColumn">
+							<f:facet name="header">
+								Location
+							</f:facet>
+							<h:outputText value="#{tournamentgame.getLocation()}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn styleClass="mtrxColumn">
+							<f:facet name="header">
+								Edit
+							</f:facet>
+							<b:commandButton iconAwesome="edit"
+											 rendered="#{tournamentgame.rendered}" action="#{managerBean.editGameDetail(tournamentgame)}" look="info">
+								<!-- <f:ajax execute="@this" render="@form" update=":form1:messages1,:form1:teamlist"/> -->
+							</b:commandButton>
+							<p:spacer width="5"  />
+							<b:commandButton iconAwesome="file"
+											 action="#{managerBean.uploadTournamentScoresheet(tournamentgame)}" look="info">
+								<!-- <f:ajax execute="@this" render="@form" update=":form1:messages1,:form1:teamlist"/> -->
+							</b:commandButton>
+							<p:spacer width="5"  />
+							<b:commandButton iconAwesome="trash"
+											 rendered="#{tournamentgame.rendered}" action="#{managerBean.deleteTournamentGame(tournamentgame)}" look="danger">
+								<!-- <f:ajax execute="@this" render="@form" update=":form1:messages1,:form1:teamlist"/> -->
+							</b:commandButton>
+						</b:dataTableColumn>
+					</b:dataTable>
 				</b:panel>
 
 				<b:panel id="panelexhibitiongames" collapsible="false" look="primary"
@@ -224,6 +306,27 @@
 					<f:facet name="heading">
 						<h:outputText value="Select Exhibition Game"/>
 					</f:facet>
+
+					<b:panelGrid colSpans="1,3,2,2,2,2" id="panelexgrid">
+						<h:outputText value=" " />
+						<b:selectOneMenu value="#{scoreboardBean.selectedseasonid}" onchange="ajax:scoreboardBean.onSeasonChange()" update="@form" >
+							<f:selectItem style="font-size:10pt;" itemLabel="Select a Season..." itemValue="0" />
+							<f:selectItems value="#{scoreboardBean.getSeasonlist()}"  var="season"  itemLabel="#{season.getDescription()}" itemValue="#{season.getKey()}"/>
+						</b:selectOneMenu>
+						<b:selectOneMenu value="#{scoreboardBean.selectedscheduleid}" onchange="ajax:scoreboardBean.onScheduleChange()" update="@form" >
+							<f:selectItem style="font-size:10pt;" itemLabel="Select a Schedule..." itemValue="0" />
+							<f:selectItems  value="#{scoreboardBean.getSchedulelist()}" var="schedule" itemLabel="#{schedule.getDescription()}" itemValue="#{schedule.getKey()}" />
+						</b:selectOneMenu>
+
+						<b:selectOneMenu value="#{scoreboardBean.selectedpartid}" onchange="ajax:scoreboardBean.onPartChange();suspensionBean.loadGames()" update="@form" >
+							<f:selectItem style="font-size:10pt;" itemLabel="Schedule For All Teams..." itemValue="0" />
+							<f:selectItems  value="#{scoreboardBean.getPartpicklist()}" var="part" itemLabel="#{part.getTeam().getTeamname()}" itemValue="#{part.getKey()}" />
+						</b:selectOneMenu>
+						<h:outputText value=" " />
+						<h:outputText value=" " />
+
+					</b:panelGrid>
+
 				</b:panel>
 				<b:panel id ="panel2" collapsible="false" look="primary">
 					<f:facet name="heading">
