--- a/WebContent/addsuspensions.xhtml
+++ b/WebContent/addsuspensions.xhtml
@@ -285,7 +285,7 @@
 						</b:dataTableColumn>
 					</b:dataTable>
 					<b:commandButton value="Add Tournament/Exhibition Game" iconAwesome="plus"
-									 action="#{managerBean.navigatetoaddgame()}" look="success" style="float: right;">
+									 action="#{suspensionBean.navigatetoaddgame()}" look="success" style="float: right;">
 					</b:commandButton>
 
 				</b:panel>
