--- a/WebContent/mail/penaltypush.html
+++ b/WebContent/mail/penaltypush.html
@@ -23,7 +23,7 @@ To All Concerned,
 	</tr>
 </table>
 <br><br>	
-The following participant(s) from the :CLUBNAME: :TEAMNAME: team received the following penalties -
+The following participant(s) from the :TEAMNAME: team received the following penalties -
 <br><bR>
 <table border="1" cellpadding="2" cellspacing="0">
 	<tr>
