--- a/WebContent/mail/penaltypushremove.html
+++ b/WebContent/mail/penaltypushremove.html
@@ -23,7 +23,7 @@ To All Concerned,
 	</tr>
 </table>
 <br><br>	
-The following suspension(s) for participant(s) from the :CLUBNAME: :TEAMNAME: team have been removed.  They are eligible to particpate in their next event.
+The following suspension(s) for participant(s) from the :TEAMNAME: team have been removed.  They are eligible to particpate in their next event.
 <br><bR>
 <table border="1" cellpadding="2" cellspacing="0">
 	<tr>
