--- a/WebContent/mail/penaltypushserved.html
+++ b/WebContent/mail/penaltypushserved.html
@@ -23,7 +23,7 @@ To All Concerned,
 	</tr>
 </table>
 <br><br>	
-The following participant(s) from the :CLUBNAME: :TEAMNAME: team have served the following suspension(s) -
+The following participant(s) from the :TEAMNAME: team have served the following suspension(s) -
 <br><bR>
 <table border="1" cellpadding="2" cellspacing="0">
 	<tr>
