add removal of emails from club list page.

--- a/WebContent/addcoachdetails.xhtml
+++ b/WebContent/addcoachdetails.xhtml
@@ -75,6 +75,7 @@
     					medium-screen="full-width"
     					small-screen="full-width"
     					tiny-screen="full-width"
+									 onchange="ajax:coachrosteractionBean.setExpireDateByLevel()" update="@form"
 					>
 				    	<f:selectItem itemLabel="Select One" itemValue="0"/>
 				    	<f:selectItem itemLabel="Level 1" itemValue="1"/>
@@ -82,9 +83,9 @@
 				    	<f:selectItem itemLabel="Level 3" itemValue="3"/>
 				    	<f:selectItem itemLabel="Level 4" itemValue="4"/>
 				    	<f:selectItem itemLabel="Level 5" itemValue="5"/>
-				    </b:selectOneMenu>
+					</b:selectOneMenu>
 					<h:outputText value="CEP Expires:" rendered="#{coachrosteractionBean.displaycoachcredentials}"/>
-					<b:inputText id="cepexpires" value="#{coachrosteractionBean.cepexpires}" rendered="#{coachrosteractionBean.displaycoachcredentials}"
+					<b:inputText id="cepexpires" value="#{coachrosteractionBean.cepexpiresdisplayvalue}" rendered="#{coachrosteractionBean.displaycoachcredentials}"
 						large-screen="full-width"
     					medium-screen="full-width"
     					small-screen="full-width"
