--- a/WebContent/viewallclubs.xhtml
+++ b/WebContent/viewallclubs.xhtml
@@ -95,16 +95,35 @@
 							            <f:facet name="header">
 									         <h:outputText value="Phone" />
 									    </f:facet>
-									    <h:outputText value="#{peep.getsPhone()}" />
+									    <!--<h:outputText value="#{peep.getsPhone()}" />-->
+										<h:outputText value="#{peep.getsPhone()}"  rendered="#{peep.renderphone}"/>
+										<b:commandButton iconAwesome="phone"
+														 action="#{scahaBean.setPersonDisplay(peep,'Phone')}" look="info" rendered="#{peep.getsEmail()==profileBean.getProfile().getUserName()}" >
+											<f:ajax execute="@this" render="@form" update="@form"/>
+										</b:commandButton>
 									</b:dataTableColumn>
 									<b:dataTableColumn >
 							            <f:facet name="header">
 									         <h:outputText value="Email" />
 									    </f:facet>
-									    <h:outputLink value="mailto:#{peep.getsEmail()}?subject=Scaha%20Related">
+									    <!--<h:outputLink value="mailto:#{peep.getsEmail()}?subject=Scaha%20Related">
 					   						 <h:outputText style="font-size: 12px;" value=" #{peep.getsEmail()}" />
-										</h:outputLink>
-									</b:dataTableColumn> 
+										</h:outputLink>-->
+										<b:commandButton iconAwesome="envelope"
+														 action="#{scahaBean.displayEmailFormClubList(peep)}" look="info" >
+											<f:ajax execute="@this" render="@form" update="@form"/>
+										</b:commandButton>
+									</b:dataTableColumn>
+									<!--<b:dataTableColumn styleClass="mtrxColumn" rendered="#{peep.getsEmail()==profileBean.getProfile().getUserName()}">
+										<f:facet name="header">
+											<h:outputText value=" " />
+										</f:facet>
+										<b:commandButton iconAwesome="phone"
+														 action="#{scahaBean.setDisplay(member,'Phone')}" look="info" >
+											<f:ajax execute="@this" render="@form" update="@form"/>
+										</b:commandButton>
+										<p:spacer width="5px" />
+									</b:dataTableColumn>-->
 								</b:dataTable>
 							</b:panel>
 				        </b:dataTableColumn> 
