fixed the usa hockey member ship link on the registration page.

--- a/WebContent/manageUSAHockey.xhtml
+++ b/WebContent/manageUSAHockey.xhtml
@@ -88,7 +88,7 @@
 					<h:outputText value=" " />
  					<h:outputText style="font-weight: bold;" value="Don't have your USA Hockey Membership?" />
 					<p:spacer width="10" height="10" />
-					<a href="https://www.usahockeyregistration.com/login_input.action" target="_blank">
+					<a href="https://membership.usahockey.com" target="_blank">
  						<b:button size="xs" id="btnUSAOpen"  value="Get USA Hockey Membership" look="info" 
  							large-screen="full-width"
 					    	medium-screen="full-width"
