editable loi and printable loi updated to pull either 2020 or 2019 team history for display.  Submitting loi will now add pdr and player counts to teams table

--- a/WebContent/clubviewdelinquencylist.xhtml
+++ b/WebContent/clubviewdelinquencylist.xhtml
@@ -45,7 +45,13 @@
 						    </f:facet>
 				            <h:outputText value="#{player.getLastname()}" />
 				        </b:dataTableColumn>
-				        <b:dataTableColumn >
+						<b:dataTableColumn >
+							<f:facet name="header">
+								Club
+							</f:facet>
+							<h:outputText value="#{player.getCurrentteam()}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn >
 				            <f:facet name="header">
 						        DOB
 						    </f:facet>
