--- a/WebContent/viewdelinquencylist.xhtml
+++ b/WebContent/viewdelinquencylist.xhtml
@@ -57,7 +57,14 @@
 						    </f:facet>
 							<h:outputText value="#{player.getDob()}" />    
 				        </b:dataTableColumn>
-				        <b:dataTableColumn >
+						<b:dataTableColumn >
+							<f:facet name="header">
+								Club
+							</f:facet>
+							<h:outputText value="#{player.getCurrentteam()}" />
+						</b:dataTableColumn>
+
+						<b:dataTableColumn >
 				            <f:facet name="header">
 						        Del Year
 						    </f:facet>
