added covid historical player history for aa/aaa to email for basic loi.

--- a/WebContent/mail/loireceipt.html
+++ b/WebContent/mail/loireceipt.html
@@ -49,11 +49,15 @@
 		<td><b>Zip:</b></td>
 		<td>:ZIP:</td>
 	</tr>
-	<tr>
-		<td><b>2019-2020 Club:</b></td>
+		<!--<td><b>2019-2020 Club:</b></td>
 		<td colspan="2">:LASTYEARCLUB:</td>
 		<td><b>Team:</b></td>
-		<td colspan="2">:LASTYEARTEAM:</td>
+		<td colspan="2">:LASTYEARTEAM:</td>-->
+	<tr>
+		<td><b>Player History</b></td>
+		<td colspan="5" align="left">
+			:PLAYERHISTORY:
+		</td>
 	</tr>
 </table>
 <table cellpadding="5" border="1" bordercolor="#000000" cellspacing="0" width="90%">
