--- a/WebContent/registrarviewlois.xhtml
+++ b/WebContent/registrarviewlois.xhtml
@@ -85,13 +85,13 @@
 						    </f:facet>
 							<h:outputText value="#{player.getCurrentteam()}" />    
 				        </b:dataTableColumn>
-				        <b:dataTableColumn >
-				            <f:facet name="header">
-						        <h:outputText value="#{registrarloiBean.getPrioryear()} Team" />
-						    </f:facet>
-							<h:outputText value="#{player.getPreviousteam()}" />    
-				        </b:dataTableColumn>
-				        <b:dataTableColumn >
+						<b:dataTableColumn >
+							<f:facet name="header">
+								2020/19 Team
+							</f:facet>
+							<h:outputText value="#{player.getPreviousteam()}," rendered="#{player.bcovid}"/><h:outputText value="&lt;br /&gt;" escape="false" rendered="#{player.bcovid}"/><h:outputText value="#{player.getPriorteam()}" />
+						</b:dataTableColumn>
+						<b:dataTableColumn >
 				            <f:facet name="header">
 						        <h:outputText value="DOB" />
 						    </f:facet>
