added roster management pdr count updates, voiding loi, and dropping player pdr count updates

--- a/WebContent/workwithbirthcertificate.xhtml
+++ b/WebContent/workwithbirthcertificate.xhtml
@@ -78,13 +78,13 @@
 				        </b:dataTableColumn>
 				        <b:dataTableColumn >
 				            <f:facet name="header">
-						        2018 Team
+						        2021Team
 						    </f:facet>
 				            <h:outputText value="#{player.getCurrentteam()}" />
 				        </b:dataTableColumn> 
 				        <b:dataTableColumn >
 				            <f:facet name="header">
-						        2017 Team
+						        2020/19 Team
 						    </f:facet>
 				            <h:outputText value="#{player.getPreviousteam()}" />
 				        </b:dataTableColumn> 
