--- a/WebContent/scahaviewloi.xhtml
+++ b/WebContent/scahaviewloi.xhtml
@@ -25,7 +25,53 @@
 	<b:row>
 		<b:column>
 			<b:form>
-			<b:panel id ="panel" collapsible="false" look="primary">
+				<b:panel id ="pdrpanel" collapsible="true" look="primary" >
+					<f:facet name="heading">
+						<h:outputText style="color: white;" value="PDR/Block Recruitment Numbers" />
+					</f:facet>
+
+					<b:panelGrid colSpans="6,6" id="pdrgrid" style="padding: 5;">
+						<b:panelGrid colSpans="9,3" id="pdrcounts" style="padding: 5;">
+							<h:outputText style="font-weight: bold;" value="Current PDR Count:"/>
+							<b:inputText disabled="true" value="#{loiBean.pdrcountwithplayer}"
+										 large-screen="full-width"
+										 medium-screen="full-width"
+										 small-screen="full-width"
+										 tiny-screen="full-width"/>
+							<h:outputText style="font-weight: bold;" value="Total Players:"/>
+							<b:inputText disabled="true" value="#{loiBean.totalplayercountwithplayer}"
+										 large-screen="full-width"
+										 medium-screen="full-width"
+										 small-screen="full-width"
+										 tiny-screen="full-width"/>
+						</b:panelGrid>
+
+						<b:dataTable
+								id="blockrec"
+								var="player"
+								value="#{loiBean.getBlockrecruitment()}"
+								searching="false"
+								editable="true"
+								select="true"
+								selectionMode="single"
+								paginated="false"
+						>
+							<b:dataTableColumn >
+								<f:facet name="header">
+									Count
+								</f:facet>
+								<h:outputText value="#{player.getDob()}" />
+							</b:dataTableColumn>
+							<b:dataTableColumn >
+								<f:facet name="header">
+									Block Recruitment Violation Against Team
+								</f:facet>
+								<h:outputText value="#{player.getLastname()}" />
+							</b:dataTableColumn>
+						</b:dataTable>
+					</b:panelGrid>
+				</b:panel>
+				<b:panel id ="panel" collapsible="false" look="primary">
 				<f:facet name="heading">
 					<h:outputText value="SCAHA LETTER OF INTENT AND MEMBERSHIP REGISTRATION #{loiBean.getCurrentyear()}" />
 				</f:facet>
