added 2020 and 2019 prior teams to the fix loi list.

--- a/WebContent/editableloi.xhtml
+++ b/WebContent/editableloi.xhtml
@@ -73,6 +73,8 @@
 							</b:dataTableColumn>
 						</b:dataTable>
 					</b:panelGrid>
+					<h:outputText style="color: white;" value="Note: Counts reflected are guidelines. Official counts will be determined by the SCAHA Registrar." />
+
 				</b:panel>
 				<b:panel id ="panel" collapsible="false" look="primary">
 					<f:facet name="heading">
