--- a/WebContent/reviewteams.xhtml
+++ b/WebContent/reviewteams.xhtml
@@ -33,7 +33,7 @@
 		    	tiny-screen="one-third"
 			>
 				<f:facet name="heading">
-					<h:outputText value="[club] Teams" />
+					<h:outputText value="Current Teams" />
 				</f:facet>
 				
 				<b:dataTable 
