--- a/WebContent/workwithbirthcertificate.xhtml
+++ b/WebContent/workwithbirthcertificate.xhtml
@@ -86,7 +86,7 @@
 				            <f:facet name="header">
 						        2020/19 Team
 						    </f:facet>
-				            <h:outputText value="#{player.getPreviousteam()}" />
+							<h:outputText value="#{player.getPreviousteam()}," rendered="#{player.bcovid}"/><h:outputText value="&lt;br /&gt;" escape="false" rendered="#{player.bcovid}"/><h:outputText value="#{player.getPriorteam()}" />
 				        </b:dataTableColumn> 
 				        <b:dataTableColumn >
 				            <f:facet name="header">
