fixed navigation for quick loi back to the correct page when scaha viewing loi page.

--- a/WebContent/quickplayerloiconfirm.xhtml
+++ b/WebContent/quickplayerloiconfirm.xhtml
@@ -58,13 +58,13 @@
 				        </b:dataTableColumn>
 				        <b:dataTableColumn >
 				            <f:facet name="header">
-						        2019 Team
+						        2021 Team
 						    </f:facet>
 				            <h:outputText value="#{player.getCurrentteam()}" />
 				        </b:dataTableColumn> 
 				        <b:dataTableColumn >
 				            <f:facet name="header">
-						        2018 Team
+						        2020/19 Team
 						    </f:facet>
 				            <h:outputText value="#{player.getPreviousteam()}" />
 				        </b:dataTableColumn> 
