added girls divisions to tournament page.

--- a/WebContent/addtournament.xhtml
+++ b/WebContent/addtournament.xhtml
@@ -114,7 +114,29 @@
 				            <f:selectItem itemLabel="Squirt 10U B" itemValue="10ub"/>
 				            <f:selectItem itemLabel="Mite Track 1" itemValue="8utr1"/>
 				            <f:selectItem itemLabel="Mite Track 2" itemValue="8utr2"/>
-				        </p:selectCheckboxMenu>
+							<f:selectItem itemLabel="Girls 19U AAA" itemValue="g19uaaa"/>
+							<f:selectItem itemLabel="Girls 19U AA" itemValue="g19uaa"/>
+							<f:selectItem itemLabel="Girls 19U A" itemValue="g19ua"/>
+							<f:selectItem itemLabel="Girls 16U AAA" itemValue="g16uaaa"/>
+							<f:selectItem itemLabel="Girls 16U AA" itemValue="g16uaa"/>
+							<f:selectItem itemLabel="Girls 16U A" itemValue="g16ua"/>
+							<f:selectItem itemLabel="Girls 14U AAA" itemValue="g14uaaa"/>
+							<f:selectItem itemLabel="Girls 14U AA" itemValue="g14uaa"/>
+							<f:selectItem itemLabel="Girls 14U A" itemValue="g14ua"/>
+							<f:selectItem itemLabel="Girls 14U B" itemValue="g14ub"/>
+							<f:selectItem itemLabel="Girls 12U AAA" itemValue="g12uaaa"/>
+							<f:selectItem itemLabel="Girls 12U AA" itemValue="g12uaa"/>
+							<f:selectItem itemLabel="Girls 12U A" itemValue="g12ua"/>
+							<f:selectItem itemLabel="Girls 12U BB" itemValue="g12ubb"/>
+							<f:selectItem itemLabel="Girls 12U B" itemValue="g12ub"/>
+							<f:selectItem itemLabel="Girls 10U A" itemValue="g10ua"/>
+							<f:selectItem itemLabel="Girls 10U BB" itemValue="g10ubb"/>
+							<f:selectItem itemLabel="Girls 10U B" itemValue="g10ub"/>
+							<f:selectItem itemLabel="Girls 8U Track 1" itemValue="g8utr1"/>
+							<f:selectItem itemLabel="Girls 8U Track 2" itemValue="g8utr2"/>
+
+
+						</p:selectCheckboxMenu>
 					</td>
 				</tr>
 			</table>	
